--- a/src/scss/app/hero.scss
+++ b/src/scss/app/hero.scss
@@ -1,5 +1,6 @@
 .hero {
-  height: 100vh;
+  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
   display: flex;
   align-items: center;
 
@@ -17,7 +18,7 @@
   line-height: $line-height-header;
 
   @include screen-mobile {
-    padding: 0 $container-mobile-padding;
+    padding: 2rem $container-mobile-padding;
   }
 
   h1 {
